adjust blog for myself

--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
 ---
 layout: default
-title: jmcglone.com
-cv: passive
-notes: passive
+title: dicyzz.github.io
+posts: passive
 contact: passive
-description: Jonathan McGlone is a Librarian, Product Designer, User Researcher, Digital Publisher, Accessibility Specialist, Music Enthusiast, and Web Noodler living and working in Michigan.
+description: 张俭是一名软件工程师，从事软件开发工作。
 ---
 <!-- <div class="jumbotron"> -->
 <div class="row marketing">
 	<div class="col-sm-4">
-	<img  class="img-circle avatar" alt="Jonathan McGlone" src="img/jmcglone-200px.png">
+	<img  class="img-circle avatar" alt="Zhang Jian" src="img/dicyzz-avatar-200px.png">
 	</div>
 	<div itemscope itemtype="http://data-vocabulary.org/Person" class="col-sm-8">
-	<p class="lead">Hi, I'm <span itemprop="name">Jonathan McGlone</span> and I make things on the web for academic libraries and scholarly publishers.</p>
-	<p>I get by as a <span itemprop="title">librarian</span>, <span itemprop="title">product designer</span>, <span itemprop="title">user researcher</span>, <span itemprop="title">digital publisher</span>, <span itemprop="title">accessibility specialist</span>, and music enthusiast living in <span itemprop="address" itemscope
-    itemtype="http://data-vocabulary.org/Address">Northern <span itemprop="region">Michigan</span></span> and working for <a href="http://www.publishing.umich.edu">Michigan Publishing</a> at <span itemprop="affiliation">the <a href="http://www.lib.umich.edu">University of Michigan Library</a></span>.</p>
+	<p class="lead">欢迎来到我的博客网站，我是<span itemprop="name">张俭</span>，我会在这里分享技术和生活</p>
+	<p>我居住在北京，在<a href="http://www.tsingmicro.com">清微智能</a>担任软件工程师，主要负责SoC级建模和验证。我的职业生涯开始于嵌入式软件，后面转型AI软件开发，
+		同时也在学习AI <span itemprop="title"></span>ToolChain</span>、<span itemprop="title">FrameWork</span>方面的知识，<span itemprop="title">正努力向架构师方向前进</span>。</p>
 	
-	<p>I'm also available for hire as a <span itemprop="title">freelance developer, designer, researcher, or consultant</span>. <a href="contact">Drop me a line</a> about your project if you're interested in working with me.</p>
+	<p>我也是一名游戏、音乐爱好者，<span itemprop="title">平时也喜欢旅游、摄影</span>。</p>
 	</div>
 </div>
 <!-- </div> -->
