--- a/contact/index.html
+++ b/contact/index.html
@@ -5,17 +5,17 @@ cv: passive
 projects: passive
 notes: passive
 contact: active
-description: Contact information for Jonathan McGlone, a Librarian, Front-End Developer, Digital Publisher, Project Manager, Music Enthusiast, and Web Noodler living and working in Michigan.
+description: Contact information for Zhang Jian, C++ enthusiast.
 ---
 <div class="contact">
 
 	<p>You can get in touch with or find me at:</p>
 	
 	<ul class="list-unstyled">
-	<li><a href="http://www.lib.umich.edu/users/jmcglone">@MLibrary</a></li>
-	<li><a href="http://github.com/jmcglone">@GitHub</a></li>
+	<li><a href="https://www.linkedin.com/in/%E4%BF%AD-%E5%BC%A0-6aabbb144/">@LinkedIn</a></li>
+	<li><a href="http://github.com/dicyzz">@GitHub</a></li>
 	<!-- <li><a href="http://jsfiddle.net/user/jmcglone/fiddles/">@jsfiddle</a></li> -->	
-	<li>Or by sending an e-mail to <span class="obfuscate">moc.liamg@enolgcmwj</span></li>
+	<li>E-mail <span class="obfuscate">moc.liamg@8420gnahznaij</span></li>
 	</ul>
 
 </div>
