--- a/notes/index.html
+++ b/notes/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Notes
+title: Posts
 notes: active
-description: Notes and short essays by Jonathan McGlone, a Librarian, Front-End Developer, Digital Publisher, Project Manager, Music Enthusiast, and Web Noodler living and working in Michigan.
+description: Zhang Jian's articles.
 ---
 	<div class="notes">
 
