--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@ description: 张俭是一名软件工程师。
 	<img  class="img-circle avatar" alt="Jonathan McGlone" src="img/dicyzz-200px.png">
 	</div>
 	<div itemscope itemtype="http://data-vocabulary.org/Person" class="col-sm-8">
-	<p class="lead">欢迎来到我的博客网站，我是<span itemprop="name">Zhang Jian</span>，会在这里分享技术和生活</p>
-	<p>我在北京工作，在<a href="http://www.lib.umich.edu">清微智能</a>担任软件工程师，主要负责<span itemprop="title">SoC</span>级建模<span itemprop="title">验证</span>。我的职业生涯开始于嵌入式软件，目前从事AI软件开发，主要语言是C/C++。
+	<p class="lead">欢迎来到<span itemprop="name">Zhang Jian</span>的博客网站，我会在这里分享技术和生活</p>
+	<p>我在北京工作，在<a href="http://www.tsingmicro.com/">清微智能</a>担任软件工程师，主要负责<span itemprop="title">SoC</span>级建模<span itemprop="title">验证</span>。我的职业生涯开始于嵌入式软件，目前从事AI软件开发，主要语言是C/C++。
 		同时我也在学习AI <span itemprop="title">ToolChain</span>、<span itemprop="title">Framework</span>方面的知识，正努力向架构师方向前进。</p>
 	
 	<p>我也是一名游戏、音乐爱好者，平时也喜欢旅游、摄影。</p>
